# inventree-python

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  TESTING.md  config_template.yaml  inventree.py  inventree_api.py  inventree_cli.py  inventree_credentials.py  inventree_object.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasks.py  tester.py
.github/workflows/: build.yaml  ci.yaml  pep.yaml  publish-to-pypi.yml  pypi.yaml
ci/: check_version_number.py
inventree/: api.py  base.py  build.py  company.py  currency.py  dns_cache.py  label.py  oAuthClient.py  order.py  part.py  plugin.py  project_code.py  purchase_order.py  report.py  return_order.py  sales_order.py  stock.py  user.py
scripts/: test_server_connection.py
test/: attachment.txt  docker-compose.yml  dummytemplate.html  dummytemplate2.html  inventree_config.yaml  test_api.py  test_base.py  test_build.py  test_company.py  test_currency.py  test_data.json  test_internal_price.py  test_label.py  test_order.py  test_part.py  test_plugin.py  test_project_codes.py  test_report.py  test_stock.py
